--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<p>Computer Science Major</p>
 									<p>Avid sports fan!!</p>
 									<ul class="actions">
-										<li><a href="https://www.linkedin.com/in/veronica-thach-194358269" class="button">Linkedin</a></li>
+										<li><a href="https://www.linkedin.com/in/veronica-thach/" class="button">Linkedin</a></li>
 									</ul>
 								</div>
 							</div>
