--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<p>Just a girl in stem who loves soccer :D </p>
 							
 							<ul class="actions">
-								<li><a href="resume.pdf" class="button scrolly">cv/resume</a></li>
+								<li><a href="resume_veronicathach.pdf" class="button scrolly">cv/resume</a></li>
 							</ul>
 						</div>
 					</section>
